# sandbox-of-streamlit

./: .gitignore  README.md  pyproject.toml  pyrightconfig.json  run_app.sh
.github/: copilot-instructions.md  pull_request_template.md
.github/workflows/: ci.yml
app/: main.py
app/common/: routing.py  secrets.py  step_by_step.py
app/pages/: 01_game.py  02_pydeck.py  03_maplibre.py  03_maplibre_copy.py  04_shapefile_pydeck.py  05_isochrone_api.py  06_here_traffic.py
docs/: HERE_TRAFFIC_API.md  MAPBOX_ISOCHRONE.md  SHAPEFILE_VISUALIZATION.md
examples/: shapefile_example.py
