[project]
name = "sandbox-of-streamlit"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "geopandas>=1.0.1",
    "maplibre[shiny]>=0.3.6",
    "pydeck>=0.9.1",
    "streamlit>=1.52.2",
    "requests>=2.0.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pyright>=1.1.390",
    "ruff>=0.15.0",
]
